Third Commit - trying to fix size on mobile

--- a/style.css
+++ b/style.css
@@ -94,13 +94,7 @@ footer {
 
 
 @media (max-width: 768px) {
-    .nav-list {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        background-color: #333;
-        width: 100%;
+    body {
+        font-size: 1.1em;
     }
 }
